update js for icon-img class // add shadws

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <link rel="stylesheet" href="dist/main.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:600" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135652591-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135652591-1');
+</script>
+
+
 </head>
 
 <body>
@@ -67,7 +79,7 @@
                     </div>
                     <div class="project-text">
                         <p>Lauchlan Craig<br> Design Portfolio</p>
-                        <span id="first-proj" class="expand"><img id="icon-first" src="./plus.png"></span>
+                        <span id="first-proj" class="expand"><img class="icon-img" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                             <p class="proj-text">
                                 A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple.
@@ -82,7 +94,7 @@
                     </div>
                     <div class="project-text">
                         <p>Cumulus<br> Personal Project</p>
-                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
+                        <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
                                     A ReactJS based app that utilises the OpenWeatherMaps API to retrieve weather data. Paired with a NodeJS API for auto-completion and improved search results, this project was a means to explore the JavaScript ecosystem!
@@ -97,7 +109,7 @@
                     </div>
                     <div class="project-text">
                         <p>Daryl Digital</p>
-                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
+                        <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
                                     Darly Digital is a collective of digital experts doing work for good people. This agency website was built with React for it's component oriented, UI runtime approach. A sprinkling of modular SCSS has set the project up for easy, long term maintenance and expansion.
@@ -112,7 +124,7 @@
                     </div>
                     <div class="project-text">
                         <p>Foodie<br> Personal Project</p>
-                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
+                        <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
                                     A ReactJS app for the searching and filtering of London based restaurants. 
