--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
         <div class="projects">
             <h3>I can make things happen</h3>
             <div class="project-wrapper">
+                    <div class="project-item">
+                            <div class="project-image">
+                                <img src="img/foodie.png">
+                            </div>
+                            <div class="project-text">
+                                <p>Foodie<br> Personal Project</p>
+                                <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
+                                <div class="proj-expand inactive">
+                                        <p class="proj-text">
+                                            A ReactJS app for the searching and filtering of London based restaurants. 
+                                        </p>
+                                        <a class="cta" href="https://github.com/mjstobo/foodie">View Project</a>                                    </div>
+                            </div>
+                        </div>
                 <div class="project-item">
                     <div class="project-image">
                         <img src="img/lc.png">
@@ -84,7 +98,7 @@
                             <p class="proj-text">
                                 A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple.
                             </p>
-                            <button class="cta" href="https://www.mjstobo.com/lcraig/">Visit Project</button>
+                            <a class="cta" href="https://www.mjstobo.com/lcraig/index.html">Visit Project</a>
                         </div>
                     </div>
                 </div>
@@ -99,40 +113,11 @@
                                 <p class="proj-text">
                                     A ReactJS based app that utilises the OpenWeatherMaps API to retrieve weather data. Paired with a NodeJS API for auto-completion and improved search results, this project was a means to explore the JavaScript ecosystem!
                                 </p>
-                                <button class="cta" href="https://github.com/mjstobo/cumulus-app">View Code</button>
+                                <a class="cta" href="https://github.com/mjstobo/cumulus-app">View Code</a>
                             </div>
                     </div>
                 </div>
-                <div class="project-item">
-                    <div class="project-image">
-                        <img src="img/daryl2.png">
-                    </div>
-                    <div class="project-text">
-                        <p>Daryl Digital</p>
-                        <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
-                        <div class="proj-expand inactive">
-                                <p class="proj-text">
-                                    Darly Digital is a collective of digital experts doing work for good people. This agency website was built with React for it's component oriented, UI runtime approach. A sprinkling of modular SCSS has set the project up for easy, long term maintenance and expansion.
-                                </p>
-                                <button class="cta" href="https://daryl.digital">Visit Project</button>
-                            </div>
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-image">
-                        <img src="img/foodie.png">
-                    </div>
-                    <div class="project-text">
-                        <p>Foodie<br> Personal Project</p>
-                        <span id="second-proj" href="#" class="expand"><img class="icon-img" src="./plus.png"></span>
-                        <div class="proj-expand inactive">
-                                <p class="proj-text">
-                                    A ReactJS app for the searching and filtering of London based restaurants. 
-                                </p>
-                                <button class="cta" href="https://github.com/mjstobo/foodie">View Code</button>
-                            </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
         <span id="experience" class="anchor"></span>
